@@ -1,3 +1,7 @@
+2009-12-29	Denis M. Gabaidulin
+
+	* main/Math/MathUtils.class.php: getMmult(): added.
+
 2009-12-19	Denis M. Gabaidulin
 
 	* main/Math/MathUtils.class.php: getStandardDeviation(): calculate
